fix the date and time to fit in screen without scroll and align title in centre

--- a/src/app/routes/cards/dateandtime/dateandtime.component.scss
+++ b/src/app/routes/cards/dateandtime/dateandtime.component.scss
@@ -4,6 +4,9 @@
   background-color: white;
   width: 100%;
   height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .content {
   p {
@@ -12,20 +15,21 @@
     text-align: justify;
     font-size: 14px;
   }
-  margin-block: 20px;
+  // margin-block: 20px;
+  width: 300px;
 }
 
 .date-time {
   background-color: #e6e6e6;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: fit-content;
-  margin: auto;
+  // margin: auto;
   border-radius: 6px;
-  padding: 5px;
+  // padding: 5px;
 }
 
 .time-container {
-  padding-block: 40px;
+  padding-block: 5px;
   .flatpickr-calendar.inline {
     background-color: transparent;
     width: fit-content !important;
